@@ -1,3 +1,9 @@
+mod-auth-openidc (1:2.3.2i-1+gcs5.@distro@) @distro@; urgency=low
+
+  * Fix bounds issue
+
+ -- Globus Toolkit <support@globus.org>  Thu, 04 Jun 2020 20:45:02 -0400
+
 mod-auth-openidc (1:2.3.2h-1+gcs5.@distro@) @distro@; urgency=low
 
   * Add inter-module request-specific OIDCAuthRequestParams
